--- a/MduiBlazor.Shared/Pages/ButtonsPage.razor
+++ b/MduiBlazor.Shared/Pages/ButtonsPage.razor
@@ -80,7 +80,7 @@
                     <td>
                         <code>string</code>
                     </td>
-                    <td>渲染组件的html元素类型。默认是<code>button</code>。</td>
+                    <td>渲染组件的html元素类型。默认<code>button</code>。</td>
                 </tr>
                 <tr>
                     <td>
@@ -213,7 +213,7 @@
                     <td>是否为激活状态，一般在<code>ButtonGroup</code>中使用，默认<code>false</code>。</td>
                 </tr>
                 <tr>
-                    <th rowspan="2">
+                    <th>
                         <code>MduiIconButton</code>
                     </th>
                     <td>
@@ -222,22 +222,15 @@
                     <td>
                         <code>string?</code>
                     </td>
-                    <td>图标按钮图标名称（见<code>MduiIcon</code>）。</td>
-                </tr>
-                <tr>
-                    <td>
-                        <code>IconColor</code>
-                    </td>
-                    <td>
-                        <code>string?</code>
-                    </td>
-                    <td>图标按钮前景颜色。</td>
+                    <td>图标按钮Material图标类名（见<code>MduiIcon</code>）。</td>
                 </tr>
                 <tr>
                     <th>
                         <code>MduiButtonGroup</code>
                     </th>
-                    <td colspan="4">无（见基类<code>MduiComponentBase</code>组件参数）。</td>
+                    <td></td>
+                    <td></td>
+                    <td>使该组件包含的按钮成为按钮组。</td>
                 </tr>
             </tbody>
         </MduiSimpleTable>
