--- a/MduiBlazor.Shared/Pages/IconsPage.razor
+++ b/MduiBlazor.Shared/Pages/IconsPage.razor
@@ -56,12 +56,12 @@
              <tbody>
                  <tr>
                      <td>
-                         <code>Name</code>
+                         <code>Icon</code>
                      </td>
                      <td>
                          <code>string?</code>
                      </td>
-                     <td>material图标或者第三方图标的类名。</td>
+                     <td>Material图标或者第三方图标的类名。</td>
                  </tr>
                  <tr>
                      <td>
@@ -70,7 +70,7 @@
                      <td>
                          <code>string?</code>
                      </td>
-                     <td>图标颜色。</td>
+                     <td>图标前景颜色。</td>
                  </tr>
                  <tr>
                      <td>
