--- a/MduiBlazor.Shared/Pages/ListPage.razor
+++ b/MduiBlazor.Shared/Pages/ListPage.razor
@@ -189,12 +189,12 @@
                  </tr>
                  <tr>
                      <td>
-                         <code>IconName</code>
+                         <code>Icon</code>
                      </td>
                      <td>
                          <code>string?</code>
                      </td>
-                     <td>Material Icon图标类名。</td>
+                     <td>Material图标类名。</td>
                  </tr>
                  <tr>
                      <td>
@@ -258,12 +258,12 @@
                  </tr>
                  <tr>
                      <td>
-                         <code>IconName</code>
+                         <code>Icon</code>
                      </td>
                      <td>
                          <code>string?</code>
                      </td>
-                     <td>Material Icon图标类名。</td>
+                     <td>Material图标类名。</td>
                  </tr>
                  <tr>
                      <td>
