--- a/MduiBlazor.Shared/Pages/MediaPage.razor
+++ b/MduiBlazor.Shared/Pages/MediaPage.razor
@@ -102,6 +102,14 @@
                      </td>
                      <td>是否使图片变成圆形。</td>
                  </tr>
+                 <tr>
+                    <td>
+                        <code>MduiVideoContainer</code>
+                    </td>
+                     <td></td>
+                     <td></td>
+                     <td>该组件使其包含的视频自适应其宽度。</td>
+                 </tr>
              </tbody>
          </MduiSimpleTable>
      </MduiTableContainer>
