--- a/MduiBlazor.Shared/Pages/TabsPage.razor
+++ b/MduiBlazor.Shared/Pages/TabsPage.razor
@@ -131,14 +131,14 @@
                      <td>
                          <code>string</code>
                      </td>
-                     <td>选项的图标类名。</td>
+                     <td>选项的Material图标类名。</td>
                  </tr>
                  <tr>
                      <td>
                          <code>IconContent</code>
                      </td>
                      <td>
-                         <code>RenderFragment</code>
+                         <code>RenderFragment?</code>
                      </td>
                      <td>选项的图标渲染片段，一般用于自定义图标。</td>
                  </tr>
