--- a/MduiBlazor.Shared/Pages/TextfieldPage.razor
+++ b/MduiBlazor.Shared/Pages/TextfieldPage.razor
@@ -148,7 +148,16 @@
                      <td>
                          <code>string?</code>
                      </td>
-                     <td>要显示的图标类名。</td>
+                     <td>要显示的Material图标类名。</td>
+                 </tr>
+                 <tr>
+                     <td>
+                         <code>IconContent</code>
+                     </td>
+                     <td>
+                         <code>RenderFragment?</code>
+                     </td>
+                     <td>要显示的图片渲染片段，一般用于自定义图标。</td>
                  </tr>
                  <tr>
                      <td>
