--- a/MduiBlazor.Shared/Pages/Examples/Tabs/DefaultActivedTab.razor
+++ b/MduiBlazor.Shared/Pages/Examples/Tabs/DefaultActivedTab.razor
@@ -1,5 +1,5 @@
 <MduiTab>
-    <MduiTabItem Title="web">web content</MduiTabItem>
-    <MduiTabItem Default Title="shopping">shopping content</MduiTabItem>
-    <MduiTabItem Title="images">images content</MduiTabItem>
+    <MduiTabItem Title="web" />
+    <MduiTabItem Default Title="shopping" />
+    <MduiTabItem Title="images" />
  </MduiTab>
