--- a/MduiBlazor.Shared/Pages/Examples/Tabs/DisabledTab.razor
+++ b/MduiBlazor.Shared/Pages/Examples/Tabs/DisabledTab.razor
@@ -1,5 +1,5 @@
 <MduiTab>
-    <MduiTabItem Title="web" Default>web content</MduiTabItem>
-    <MduiTabItem Disabled Title="shopping">shopping content</MduiTabItem>
-    <MduiTabItem Title="images">images content</MduiTabItem>
+    <MduiTabItem Title="web" Default />
+    <MduiTabItem Disabled Title="shopping" />
+    <MduiTabItem Title="images" />
  </MduiTab>
