--- a/MduiBlazor.Shared/Pages/Examples/Tabs/FullWidthTab.razor
+++ b/MduiBlazor.Shared/Pages/Examples/Tabs/FullWidthTab.razor
@@ -1,5 +1,5 @@
 <MduiTab FullWidth>
-    <MduiTabItem Title="web" Default>web content</MduiTabItem>
-    <MduiTabItem Title="shopping">shopping content</MduiTabItem>
-    <MduiTabItem Title="images">images content</MduiTabItem>
+    <MduiTabItem Title="web" Default />
+    <MduiTabItem Title="shopping" />
+    <MduiTabItem Title="images" />
 </MduiTab>
