--- a/MduiBlazor.Shared/Pages/Examples/Tabs/IconTab.razor
+++ b/MduiBlazor.Shared/Pages/Examples/Tabs/IconTab.razor
@@ -1,5 +1,5 @@
 <MduiTab>
-    <MduiTabItem Icon="phone" Default>web content</MduiTabItem>
-    <MduiTabItem Icon="favorite">shopping content</MduiTabItem>
-    <MduiTabItem Icon="perm_contact_calendar">images content</MduiTabItem>
+    <MduiTabItem Icon="phone" Default />
+    <MduiTabItem Icon="favorite" />
+    <MduiTabItem Icon="perm_contact_calendar" />
 </MduiTab>
