--- a/MduiBlazor.Shared/Shared/NavMenu.razor
+++ b/MduiBlazor.Shared/Shared/NavMenu.razor
@@ -37,6 +37,7 @@
             <MduiNavMenuItem Href="list">列表</MduiNavMenuItem>
             <MduiNavMenuItem Href="tabs">Tab 选项卡</MduiNavMenuItem>
             <MduiNavMenuItem Href="toolbar">工具栏</MduiNavMenuItem>
+            <MduiNavMenuItem Href="appbar">应用栏</MduiNavMenuItem>
             <MduiNavMenuItem Href="cards">Cards</MduiNavMenuItem>
             <MduiNavMenuItem Href="chips">Chips</MduiNavMenuItem>
             <MduiNavMenuItem Href="dialogs">Dialogs</MduiNavMenuItem>
