--- a/MduiBlazor.Shared/Pages/Examples/Tabs/ColorTab.razor
+++ b/MduiBlazor.Shared/Pages/Examples/Tabs/ColorTab.razor
@@ -1,5 +1,5 @@
 <MduiTab Color="@Colors.Theme.Primary">
-    <MduiTabItem Icon="phone" Title="recents" Default>web content</MduiTabItem>
-    <MduiTabItem Icon="favorite" Title="favorites">shopping content</MduiTabItem>
-    <MduiTabItem Icon="perm_contact_calendar" Title="nearby">images content</MduiTabItem>
+    <MduiTabItem Icon="phone" Title="recents" Default />
+    <MduiTabItem Icon="favorite" Title="favorites" />
+    <MduiTabItem Icon="perm_contact_calendar" Title="nearby" />
 </MduiTab>
